# collie

./: .gitignore  CMakeLists.txt  README.md
carbin_cmake/modules/: carbin_system_info.cmake
carbin_cmake/package/: carbin_cpack.cmake  carbin_deb.cmake  carbin_rpm.cmake
cmake/: collie_deps.cmake  collie_package_config.cmake
cmake/rpm/: postinst.in
collie/: CMakeLists.txt  version.h
collie/base/: bit.h  cpuid.h  debug_assert.h  endian.h  engine_registry.h  identity.h  macros.h  math_utils.h  safe_alloc.h  singleton.h  swap_byte_order.h  uuid.h
collie/cli/: app.h  argv.h  cli.h  config.h  config_fwd.h  encoding.h  error.h  formatter.h  formatter_fwd.h  macros.h  option.h  split.h  string_tools.h  timer.h  type_tools.h  validators.h  version.h
collie/cli/impl/: app_inl.h  argv_inl.h  config_inl.h  encoding_inl.h  formatter_inl.h  option_inl.h  split_inl.h  string_tools_inl.h  validators_inl.h
collie/container/: algorithm.h  dynamic_bitset.h  fifo_map.h  htrie_hash.h  htrie_map.h  htrie_set.h  inlined_vector.h  iterator.h  small_vector.h  span.h
collie/filesystem/: fs.h
collie/log/: async.h  async_logger-inl.h  async_logger.h  bin_to_hex.h  clog-inl.h  clog.h  common-inl.h  common.h  easy_alias.h  formatter.h  fwd.h  logger-inl.h  logger.h  logging.h  pattern_formatter-inl.h  pattern_formatter.h  stopwatch.h  tweakme.h  version.h
collie/macro/: debug_assert.h  macros.h
collie/memory/: aligned_allocator.h  aligned_storage.h
collie/meta/: reflect.h
collie/module/: lib_path.h  module.h  semver.h
collie/port/: port.h  simd_config.h
collie/simd/: simd.h
collie/strings/: ascii.h  case_conv.h  cat.h  format.h  inlined_string.h  match.h  replace.h  splitter.h  str_split.h  string_builder.h  text_style.h  trim.h  utility.h
collie/table/: asciidoc_exporter.h  cell.h  color.h  column.h  column_format.h  exporter.h  font_align.h  font_style.h  format.h  latex_exporter.h  markdown_exporter.h  printer.h  row.h  table.h  table_internal.h  termcolor.h  utf8.h
collie/taskflow/: taskflow.h
collie/testing/: matcher.h  pico_bench.hpp  test.h
collie/toml/: toml.h
collie/type_safe/: arithmetic_policy.h  boolean.h  bounded_type.h  compact_optional.h  config.h  constrained_type.h  deferred_construction.h  downcast.h  flag.h  flag_set.h  floating_point.h  index.h  integer.h  narrow_cast.h  optional.h  optional_ref.h  output_parameter.h  reference.h  strong_typedef.h  tagged_union.h  types.h  variant.h  visitor.h
collie/unicode/: simdutf.h  simdutf_inl.h  utf.h
collie/utility/: compare.h  result.h  status.h
conda/: bld.sh  conda_build_config.yaml  environment_linux.yaml  environment_osx.yaml  meta.yaml
examples/: CMakeLists.txt
examples/cli/: CMakeLists.txt  arg_capture.cpp  callback_passthrough.cpp  config_app.cc  custom_parse.cpp  digit_args.cpp  enum.cpp  enum_ostream.cpp  formatter.cpp  groups.cpp  inter_argument_order.cpp  modhelp.cpp  nested.cpp  option_groups.cpp  positional_arity.cc  positional_validation.cpp  positional_vector.cc  prefix_command.cpp  ranges.cpp  retired.cpp  shapes.cpp  simple.cpp  subcom_help.cpp  subcom_partitioned.cpp  subcommands.cpp  testEXE.cpp  validators.cpp
examples/container/: CMakeLists.txt  inlined_vector.cc  small_vector.cc
examples/log/: CMakeLists.txt  log_example.cc  stream_log.cc
examples/meta/: CMakeLists.txt
examples/module/: CMakeLists.txt  basic_example.cc  range_example.cc
examples/simd/: CMakeLists.txt  mandelbrot.cc
examples/strings/: CMakeLists.txt  cat.cc  split_vector.cc  splitter.cc  str_format.cc
examples/table/: CMakeLists.txt  asciidoc_export.cc  class_diagram.cc  colors.cc  employees.cc  font_styles.cc  iterators.cc  latex_export.cc  mario.cc  markdown_export.cc  movies.cc  no_trim.cc  padding.cc  refresh_table.cc  runic.cc  shape.cc  string_view_in_row.cc  summary.cc  unicode.cc  universal_constants.cc  word_wrapping.cc
examples/taskflow/: CMakeLists.txt
examples/tc/: CMakeLists.txt  constrained.cc  optional.cc  output_parameter.cc  strong_typedef.cc  types.cc
examples/toml/: CMakeLists.txt
examples/unicode/: CMakeLists.txt  utf_demo.cc
examples/utility/: CMakeLists.txt  result_ex.cc
tests/: CMakeLists.txt
tests/base/: CMakeLists.txt  uuid_test.cc
tests/container/: CMakeLists.txt  iterator_test.cc
tests/log/: CMakeLists.txt  async_test.cc  backtrace_test.cc  daily_logger_test.cc  log_cfg_test.cc  log_dup_filter_test.cc  log_file_logging_test.cc  log_fmt_helper_test.cc  log_macros_test.cc  log_misc_test.cc  log_mpmc_q_test.cc  log_pattern_formatter_test.cc  log_registry_test.cc  log_stdout_api_test.cc  log_time_point_test.cc  utils.cc
tests/meta/: CMakeLists.txt
tests/simd/: CMakeLists.txt  main.cc  test_api.cc  test_arch.cc  test_basic_math.cc  test_batch.cc  test_batch_bool.cc  test_batch_cast.cc  test_batch_complex.cc  test_batch_constant.cc  test_batch_float.cc  test_batch_int.cc  test_batch_manip.cc  test_bitwise_cast.cc  test_complex_exponential.cc  test_complex_hyperbolic.cc  test_complex_power.cc  test_complex_trigonometric.cc  test_conversion.cc  test_custom_default_arch.cc  test_error_gamma.cc  test_explicit_batch_instantiation.cc  test_exponential.cc  test_extract_pair.cc  test_fp_manipulation.cc  test_gnu_source.cc  test_hyperbolic.cc  test_load_store.cc  test_memory.cc  test_poly_evaluation.cc  test_power.cc  test_rounding.cc  test_select.cc  test_shuffle.cc  test_simd_api.cc  test_traits.cc  test_trigonometric.cc  test_utils.hpp
tests/strings/: CMakeLists.txt  case_conv_test.cc  inlined_string_test.cc  replace_test.cc  str_split_test.cc  trim_test.cc
tests/taskflow/: CMakeLists.txt
tests/tc/: CMakeLists.txt  arithmetic_policy.cc  boolean.cc  bounded_type.cc  compact_optional.cc  constant_parser.cc  constrained_type.cc  debugger_type.hpp  deferred_construction.cc  downcast.cc  flag.cc  flag_set.cc  floating_point.cc  index.cc  integer.cc  narrow_cast.cc  optional.cc  optional_ref.cc  output_parameter.cc  reference.cc  std_tc.cc  strong_typedef.cc  tagged_union.cc  test.cc  variant.cc  visitor.cc
tests/utility/: CMakeLists.txt  status_test.cc
(+296 files in other folders)
